Refactoring; update uses github

--- a/VWiFiManager/VWiFiManager.csproj
+++ b/VWiFiManager/VWiFiManager.csproj
@@ -117,8 +117,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>"V:\!Sources\VersionDump\VersionDump\bin\x64\Release\VersionDump.exe" "VWiFiManager" "V:\VWiFiManager\app.setup\VWiFiManager_setup.exe" "https://github.com/rensatsu/VWiFiManager/VWiFiManager_Setup.exe" "V:\!Sources\VWiFiManager\version.txt"
+
+"C:\Program Files (x86)\Inno Setup 5\ISCC.exe" "V:\VWiFiManager\app.setup_res\inno_setup.iss"
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
