--- a/VWiFiManager/VWiFiManager.csproj
+++ b/VWiFiManager/VWiFiManager.csproj
@@ -119,7 +119,7 @@
   <PropertyGroup>
     <PostBuildEvent>"C:\Program Files (x86)\Inno Setup 5\ISCC.exe" "V:\VWiFiManager\app.setup_res\inno_setup.iss"
 
-"V:\!Sources\VersionDump\VersionDump\bin\x64\Release\VersionDump.exe" "VWiFiManager" "V:\!Sources\VWiFiManager\Setup\VWiFiManager_Setup.exe" "https://github.com/rensatsu/VWiFiManager/raw/master/Setup/VWiFiManager_Setup.exe" "V:\!Sources\VWiFiManager\version.txt"
+"V:\!Sources\VersionDump\VersionDump\bin\x64\Release\VersionDump.exe" "VWiFiManager" "V:\!Sources\VWiFiManager\Setup\VWiFiManager_Setup.exe" "https://raw.githubusercontent.com/rensatsu/VWiFiManager/master/Setup/VWiFiManager_Setup.exe" "V:\!Sources\VWiFiManager\version.txt"
 
 </PostBuildEvent>
   </PropertyGroup>
